--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>五线谱学习工具</title>
 <style>
     body { font-family: Arial, sans-serif; text-align: center; }
-    #staff { text-align: center; margin-top: 20px; }
+    #staff { text-align: center; margin-top: 20px;}
     .key-container { position: relative; width: 420px; height: 200px; margin: 0 auto; }
     .white-key { 
       position: relative;
@@ -31,6 +31,30 @@
     .key:nth-child(4) .black-key { left: 220px; }
     .key:nth-child(5) .black-key { left: 280px; }
     .key:nth-child(6) .black-key { left: 340px; }
+    .correct { color: green; }
+    .incorrect { color: red; }
+    @media only screen and (max-width: 600px) {
+  body {
+    font-size: 16px; /* 增加字体大小 */
+  }
+  .key-container {
+    width: 100%; /* 容器宽度设置为100% */
+    height: auto; /* 高度自适应 */
+  }
+  .white-key, .black-key {
+    width: 14%; /* 键的宽度设置为容器宽度的14% */
+    height: 60px; /* 键的高度 */
+  }
+  .black-key {
+    height: 40px; /* 黑键的高度稍短 */
+  }
+  /* 调整黑键的位置 */
+  .key:nth-child(1) .black-key { left: 70%; }
+  .key:nth-child(2) .black-key { left: 30%; }
+  .key:nth-child(4) .black-key { left: 10%; }
+  .key:nth-child(5) .black-key { left: 50%; }
+  .key:nth-child(6) .black-key { left: 90%; }
+}
   </style>
 <script src="https://img1.ccgxk.com/ccgxk-oss/js/abc.js" type="text/javascript"></script>
 <script>
@@ -43,29 +67,42 @@
     currentNote = notes[Math.floor(Math.random() * notes.length)];
     var noteAbc = currentNote + "4"; // 4代表四分音符
     ABCJS.renderAbc("staff", abcNotation + noteAbc);
+    document.getElementById('result').textContent = ''; // 清除之前的结果
+    document.getElementById('result').className = ''; // 清除之前的样式
     timer = setTimeout(function() {
       showResult(false); // 显示结果
     }, 3000); // 3秒
   }
 
-  function showResult(correct) {
-    if (correct) {
-      // 如果答案正确，显示“正确”，然后等待半秒后显示下一个音符
-      document.getElementById('result').textContent = '正确';
-      setTimeout(showNote, 500); // 半秒后调用showNote函数
-    } else {
-      // 如果答案错误，弹出消息框
-      var displayNote = currentNote === 'B' ? 'H' : currentNote;
-      alert("错误！正确答案是：" + displayNote);
-      showNote(); // 显示下一个音符
-    }
+ function showResult(correct) {
+  var resultElement = document.getElementById('result');
+  if (correct) {
+    resultElement.textContent = '正确';
+    resultElement.className = 'correct'; // 应用绿色样式
+    setTimeout(showNote, 1000); // 1秒后调用showNote函数
+  } else {
+    var displayNote = currentNote === 'B' ? 'H' : currentNote;
+    alert("错误！正确答案是：" + displayNote); // 弹出消息框显示错误信息
+    resultElement.textContent = '错误！正确答案是：' + displayNote;
+    resultElement.className = 'incorrect'; // 应用红色样式
+    showNote(); // 显示下一个音符
   }
+}
 
   function checkAnswer(note) {
     clearTimeout(timer);
     var correct = (note === 'H' && currentNote === 'B') || note === currentNote;
     showResult(correct); // 根据答案是否正确调用showResult函数
   }
+
+  window.onload = function() {
+    var whiteKeys = document.querySelectorAll('.white-key');
+    var thirdWhiteKey = whiteKeys[2]; // 获取第三个白键（E键）的位置
+    var thirdWhiteKeyPosition = thirdWhiteKey.getBoundingClientRect().left;
+        var staff = document.getElementById('staff');
+    staff.style.marginLeft = thirdWhiteKeyPosition + 'px';
+};
+
 </script>
 </head>
 <body>
@@ -73,7 +110,7 @@
     <h1>五线谱学习工具</h1>
     <button onclick="showNote()">显示音符</button>
     
-    <div id="staff"></div>
+    <div id="staff" ></div>
     <div id="result"></div>
     
     <div class="key-container">
