--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=2.0">
 <title>五线谱学习工具</title>
 <style>
     body { font-family: Arial, sans-serif; text-align: center; }
