--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ function updateClef() {
 <input type="text" id="noteB" value="B">
 
 <br>
-<span>H请输入B</span>
+<span>H is equivalent to B</span>
 <br>
 <label for="clef">Select clef:</label>
 <select id="clef">
